--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@expo/webpack-config": "^0.17.0",
+    "@mui/material": "^5.10.4",
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.5"
+    "firebase": "^9.9.4",
+    "react": "18.1.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.70.1",
+    "react-native-bouncy-checkbox": "^3.0.4",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
